tests/Checker/everything/errors/6c.vc
int main() {
    float a = 1.0;
    int b = a;
    return 1;
}
